objects/sfal__SuccessPlanTemplateTask__c.object
<CustomObject>
    <description>A template that allows advisors to create, reuse, and share tasks as part of a Success Plan Template.</description>
    <fields>
        <fullName>sfal__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status for the task in a Success Plan Template.</description>
        <inlineHelpText>When you apply a Success Plan Template, only active tasks are applied.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Comments__c</fullName>
        <description>Comments about the task in a Success Plan Template.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Priority__c</fullName>
        <description>Priority for the task in a Success Plan Template.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfal__RelativeDueDate__c</fullName>
        <description>When a Success Plan Template is applied, a Task&apos;s Due Date is set to the current date. To set a Due Date in the future, specify the number of days to use as an offset.</description>
        <inlineHelpText>When a Success Plan Template is applied, a Task&apos;s Due Date is set to the current date. To set a Due Date in the future, specify the number of days to use as an offset.</inlineHelpText>
        <label>Relative Due Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__SuccessPlanTemplate__c</fullName>
        <description>The Success Plan Template that this task relates to.</description>
        <inlineHelpText>The Success Plan Template that this task relates to.</inlineHelpText>
        <label>Success Plan Template</label>
        <referenceTo>sfal__SuccessPlanTemplate__c</referenceTo>
        <relationshipLabel>Success Plan Template Tasks</relationshipLabel>
        <relationshipName>Success_Plan_Template_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfal__Type__c</fullName>
        <description>The type of task in a Success Plan Template.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Success Plan Template Task</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plan Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>